name:                smash-the-code
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ThibaudDauce/smash-the-code#readme
license:             BSD3
license-file:        LICENSE
author:              Thibaud Dauce
maintainer:          thibaud@dauce.fr
copyright:           2016 Thibaud Dauce
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , matrix
                     , vector
  default-language:    Haskell2010

executable smash-the-code-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , smash-the-code
  default-language:    Haskell2010

test-suite smash-the-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , smash-the-code
                     , hspec
                     , matrix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ThibaudDauce/smash-the-code
